name:          Arena
version:       1.0.0

author:        Ugay Yanis <ugai1yanis1@gmail.com>
maintainer:    Ugay Yanis <ugai1yanis1@gmail.com>

category:      GameDevelopment
synopsis:      Arena
description:
  Game about arena where you can fight with your friends
license:       MIT

build-type:    Simple
cabal-version: >= 1.10

--------------------------------------------------------------------------------

--extra-source-files:
  
--------------------------------------------------------------------------------

executable Arena
  default-language: Haskell2010

  hs-source-dirs: src
  main-is: Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    DatasTypesClasses
    Demo
    FirstScene
    GLAssistant
    GLFWAssistant
    Node
    Scene
    Sprite
    Temp
    Texture
    Transform


  build-depends:
      GLFW-b
    , OpenGL
    , base
    , mtl
    , pretty
    , transformers
    , bmp
    , bytestring
    , stm
    , split
    , JuicyPixels
    , lens
    , sort
    , template-haskell
  ghc-options: -Wall -O2
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs

--------------------------------------------------------------------------------

source-repository head
  type:     git
  location: https://github.com/frogsrop/Arena.git